--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@prisma/client": "^5.10.2",
     "@tailwindcss/typography": "github:tailwindcss/typography",
     "next": "14.1.0",
     "react": "^18",
@@ -18,6 +19,7 @@
     "autoprefixer": "^10.0.1",
     "daisyui": "^4.7.2",
     "postcss": "^8",
+    "prisma": "^5.10.2",
     "tailwindcss": "^3.4.1"
   }
 }
