--- a/package.json
+++ b/package.json
@@ -16,10 +16,13 @@
     "react-dom": "^18"
   },
   "devDependencies": {
+    "@types/node": "20.11.20",
+    "@types/react": "18.2.58",
     "autoprefixer": "^10.0.1",
     "daisyui": "^4.7.2",
     "postcss": "^8",
     "prisma": "^5.10.2",
-    "tailwindcss": "^3.4.1"
+    "tailwindcss": "^3.4.1",
+    "typescript": "5.3.3"
   }
 }
